# smart-planner

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py  services.py
app/api/: routes.py
app/compiler/: compile.py  timegrid.py
app/defaults/: realism.py
app/export/: base.py  ics.py
app/llm/: client.py  explainer.py  parser.py  prompts.py
app/schemas/: actions.py  api.py  ir.py  schedule.py
app/solver/: model.py  solve.py  unsat.py  validate.py
app/store/: constraint_store.py  session.py
frontend/: app.js  index.html  style.css
scripts/: record_goldens.py
tests/: conftest.py  test_api.py  test_compile.py  test_envelope.py  test_explainer.py  test_gemini_live.py  test_ics_export.py  test_parser_golden.py  test_solver_basic.py  test_solver_stability.py  test_timegrid.py  test_unsat_core.py
tests/golden/gemini_explain/: 01_sommeil_travail.json
tests/golden/gemini_parse/: 01_reunion_hebdo.json  02_pause_quotidienne.json  03_sommeil_10h.json  04_sport_3x45.json  05_pas_avant_9h.json  06_suppression_reunion.json  07_rapport_fractionnable.json  08_english_once.json  09_clarification.json  10_multi_actions.json
